changed to semantic elements

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -7,7 +7,8 @@
   </head>
 
   <body>
-    <div class="header">
+    <!-- replaced with semantic element -->
+    <header class="header">
       <h1>Hori<span class="seo">seo</span>n</h1>
       <div>
         <ul>
@@ -24,8 +25,9 @@
           </li>
         </ul>
       </div>
-    </div>
-    <div class="hero"></div>
+    </header>
+    <!-- replaced with semantic element -->
+    <main class="hero"></div>
     <div class="content">
       <div class="search-engine-optimization">
         <img
@@ -70,8 +72,9 @@
           your lead generation.
         </p>
       </div>
-    </div>
-    <div class="benefits">
+    </main>
+    <!-- replaced with aside tag -->
+    <aside class="benefits">
       <div class="benefit-lead">
         <h3>Lead Generation</h3>
         <img src="./assets/images/lead-generation.png" />
@@ -96,10 +99,11 @@
           costs decrease, and you no longer need to advertise your page.
         </p>
       </div>
-    </div>
-    <div class="footer">
+    </aside>
+    <!-- replaced with footer tag -->
+    <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
-    </div>
+    </footer>
   </body>
 </html>
