--- a/Develop/index.html
+++ b/Develop/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>website</title>
+    <!-- added proper title -->
+    <title>Horiseon</title>
   </head>
 
   <body>
@@ -27,11 +28,14 @@
       </div>
     </header>
     <!-- replaced with semantic element -->
-    <main class="hero"></div>
-    <div class="content">
-      <div class="search-engine-optimization">
+    <div class="hero"></div>
+    <main class="content">
+      <!-- added id -->
+      <div id="search-engine-optimization" class="search-engine-optimization">
+        <!-- added alt tag -->
         <img
           src="./assets/images/search-engine-optimization.jpg"
+          alt="notebook outlining search enginging optimniziation"
           class="float-left"
         />
         <h2>Search Engine Optimization</h2>
@@ -46,8 +50,10 @@
         id="online-reputation-management"
         class="online-reputation-management"
       >
+        <!-- added alt tag -->
         <img
           src="./assets/images/online-reputation-management.jpg"
+          alt="laptop with increased reputation"
           class="float-right"
         />
         <h2>Online Reputation Management</h2>
@@ -60,8 +66,10 @@
         </p>
       </div>
       <div id="social-media-marketing" class="social-media-marketing">
+        <!-- added alt tag -->
         <img
           src="./assets/images/social-media-marketing.jpg"
+          alt="social media buzzwords"
           class="float-left"
         />
         <h2>Social Media Marketing</h2>
@@ -73,6 +81,7 @@
         </p>
       </div>
     </main>
+
     <!-- replaced with aside tag -->
     <aside class="benefits">
       <div class="benefit-lead">
