--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- added proper title -->
-    <title>Horiseon</title>
+    <title>Horiseon Search Engine Optimazation</title>
   </head>
 
   <body>
